tried unsuccessfully to add face buttons

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Chuckle Checklist</title>
+    <script
+      src="https://kit.fontawesome.com/7fd2843b0a.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
